// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeOptions contentBase array should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "contentBase": Array [
    "/path/to/dist1",
    "/path/to/dist2",
  ],
  "filename": "[name].js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions contentBase string should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "contentBase": "/path/to/dist",
  "filename": "[name].js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions existing devServer.filename, existing compiler filename should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "devserver-bundle.js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions existing devServer.filename, no compiler filename should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "devserver-bundle.js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, existing devServer.filename, existing compiler filename should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "devserver-bundle.js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, existing devServer.filename, no compiler filename should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "devserver-bundle.js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no devServer.filename, existing compiler filename should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "mybundle.js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no devServer.filename, no compiler filename should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "[name].js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no devServer.filename, existing compiler filename should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "mybundle.js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no devServer.filename, no compiler filename should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "[name].js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "[name].js",
  "serverMode": "sockjs",
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions watchOptions should set correct options 1`] = `
Object {
  "clientMode": "sockjs",
  "filename": "[name].js",
  "serverMode": "sockjs",
  "watchOptions": Object {
    "poll": true,
  },
}
`;
